--- a/starter-code/style-guides.html
+++ b/starter-code/style-guides.html
@@ -55,7 +55,7 @@
 <body>
   <div id="root">
     <div class="container">
-      <h1 class="title">IronNutrition</h1>
+      <h1 class="title">Prueba Ulfix</h1>
       <div>
         <input type="text" class="input search-bar" name="search" placeholder="Search" value="">
       </div>
